--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -62,7 +62,7 @@
               <td class="settings__tableInfo">
                 <h4>{{skill.name}}</h4>
                 <p>
-                  {{skill.description}}
+                  {{skill.description|linebreaksbr}}
                 </p>
               </td>
               <td class="settings__tableActions">
