--- a/users/templates/users/user-profile.html
+++ b/users/templates/users/user-profile.html
@@ -66,7 +66,7 @@
               <div class="devSkill">
                 <h4 class="devSkill__title">{{skill.name}}</h4>
                 <p class="devSkill__info">
-                  {{skill.description}}
+                  {{skill.description|linebreaksbr}}
                 </p>
               </div>
               {% endfor %}
