--- a/templates/main.html
+++ b/templates/main.html
@@ -46,4 +46,5 @@
 </body>
 <script src="{% static 'uikit/app.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="https://kit.fontawesome.com/bb9a1de5bc.js" crossorigin="anonymous"></script>
 </html>
