--- a/templates/form-template.html
+++ b/templates/form-template.html
@@ -7,7 +7,7 @@
     <main class="formPage my-xl">
         <div class="content-box">
             <div class="formWrapper">
-                <a class="backButton" href="#"><i class="im im-angle-left"></i></a>
+                <a class="backButton" href="#"><i class="fa-solid fa-arrow-left-long"></i></a>
                 <br>
 
                 <form class="form" method="POST">
