--- a/users/templates/users/skill_forms.html
+++ b/users/templates/users/skill_forms.html
@@ -6,7 +6,7 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
+            <a class="backButton" href="{% url 'account' %}"><i class="fa-solid fa-arrow-left-long"></i></a>
             <br>
 
             <form class="form" method="POST">
